<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_share">Post share</string>
    <string name="description_post_views">Post views</string>
    <string name="description_post_save">save</string>
    <string name="description_post_editing">Post editing</string>
    <string name="description_post_cancel_editing">Post cancel editing</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="post_editing">Post editing</string>
    <string name="description_add_post">Add post</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="chooser_play_video">Play video</string>
    <string name="apps_not_found">Apps not found</string>
    <string name="description_play_video">play video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="error_notification">Notification error. Please update the app.</string>
    <string name="user_published_a_post">"%1$s published a new post: "</string>
    <string name="empty_post">There are no posts. If you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="attachment_images">Post attachment: image.</string>
    <string name="recent_posts">Recent posts</string>
    <string name="menu_save">save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select Photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="login">login</string>
    <string name="log_in_to_your_account">log in to your account</string>
    <string name="exiting_the_app">Exiting the app</string>
    <string name="are_you_sure_you_want_to_get_out">Are you sure you want to get out?</string>
    <string name="authorization_is_required">Authorization is required</string>
    <string name="authorization_is_required_message">To perform this action, you must log in to your account. Go to the login screen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account_yet_register">Don\'t have an account yet? Register</string>
    <string name="registration">Sign up</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="passwords_don_t_match">Passwords don\'t match!</string>
    <string name="network_or_server_error">Network or server error</string>
    <string name="login_is_already_taken">Login is already taken</string>
    <string name="empty_response_from_the_server">Empty response from the server</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="all_fields_are_required">All fields are required.</string>
    <string name="ad_description">Ad</string>
    <string name="do_you_really_want_to_delete_the_post">Do you really want to delete the post?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
</resources>